# fast_api_tutorial

./: .dockerignore  .gitignore  Dockerfile  Makefile  prek.toml  pyproject.toml
.github/workflows/: pull_request.yaml  push_build_deploy_on_master.yaml
src/: app.py
terraform/: cloudrun.tf  iam.tf  main.tf  network.tf  registry.tf  variables.tf
